--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ authors = [
   { name="Gabriel Missael Barco", email="missaelgabo@gmail.com" },
   { name="Gil Estéfano Rodríguez Rivera", email="ge.rodriguezrivera@ugto.mx" },
   { name="Estefanía Saucedo Tamayo", email="estefaniasaucedo@hotmail.com" },
-  { name="Hector Fernando Nieto Soto", email="hectorfernandonietosoto@gmail.com" }
+  { name="Hector Fernando Nieto Soto", email="hectorfernandonietosoto@gmail.com" },
+  { name="David Pedroza Segoviano", email="david.pedroza.segoviano@gmail.com" }
 ]
 description = "Unblind is a Python package to create data visualizations from data of the Plataforma Digital Nacional, Sistema Nacional Anticorrupción"
 readme = "README.md"
