--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==2.2.0
+autopep8==2.0.0
 backcall==0.2.0
 bleach==5.0.1
 build==0.9.0
@@ -22,6 +23,7 @@ ipython==8.7.0
 jaraco.classes==3.2.3
 jedi==0.18.2
 jeepney==0.8.0
+joblib==1.2.0
 jupyter_client==7.4.7
 jupyter_core==5.1.0
 keyring==23.11.0
@@ -38,12 +40,14 @@ pep517==0.13.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.3.0
+pkg_resources==0.0.0
 pkginfo==1.9.2
 platformdirs==2.5.4
 prompt-toolkit==3.0.33
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.10.0
 pycparser==2.21
 Pygments==2.13.0
 pyparsing==3.0.9
@@ -55,10 +59,13 @@ requests==2.28.1
 requests-toolbelt==0.10.1
 rfc3986==2.0.0
 rich==12.6.0
+scikit-learn==1.1.3
+scipy==1.9.3
 seaborn==0.12.1
 SecretStorage==3.3.3
 six==1.16.0
 stack-data==0.6.2
+threadpoolctl==3.1.0
 tomli==2.0.1
 tornado==6.2
 traitlets==5.6.0
@@ -67,4 +74,5 @@ typing_extensions==4.4.0
 urllib3==1.26.13
 wcwidth==0.2.5
 webencodings==0.5.1
+wget==3.2
 zipp==3.11.0
