--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 altair==4.2.0
+asttokens==2.2.0
 attrs==22.1.0
+autopep8==2.0.0
+backcall==0.2.0
 backports.zoneinfo==0.2.1
 bleach==5.0.1
 blinker==1.5
+Brotli==1.0.9
 build==0.9.0
 cachetools==5.2.0
 certifi==2022.9.24
@@ -10,60 +14,104 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 commonmark==0.9.1
+contourpy==1.0.6
 cryptography==38.0.4
+cycler==0.11.0
+debugpy==1.6.4
 decorator==5.1.1
 docutils==0.19
 entrypoints==0.4
+executing==1.2.0
+fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.29
 idna==3.4
 importlib-metadata==5.1.0
 importlib-resources==5.10.0
+inflate64==0.3.1
+ipykernel==6.17.1
+ipython==8.7.0
 jaraco.classes==3.2.3
+jedi==0.18.2
 jeepney==0.8.0
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.17.3
+jupyter-client==7.4.7
+jupyter-core==5.1.0
 keyring==23.11.0
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
 more-itertools==9.0.0
+multivolumefile==0.2.3
+nest-asyncio==1.5.6
 numpy==1.23.5
 packaging==21.3
 pandas==1.5.2
+parso==0.8.3
+patool==1.12
 pep517==0.13.0
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.3.0
 pkginfo==1.9.2
 pkgutil-resolve-name==1.3.10
+platformdirs==2.5.4
+prompt-toolkit==3.0.33
 protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py7zr==0.20.2
 pyarrow==10.0.1
+pybcj==1.0.1
+pycodestyle==2.10.0
 pycparser==2.21
+pycryptodomex==3.16.0
 pydeck==0.8.0
 Pygments==2.13.0
 Pympler==1.0.1
 pyparsing==3.0.9
+pyppmd==1.0.0
 pyrsistent==0.19.2
 python-dateutil==2.8.2
 pytz==2022.6
 pytz-deprecation-shim==0.1.0.post0
+pyzmq==24.0.1
+pyzstd==0.15.3
 readme-renderer==37.3
 requests==2.28.1
 requests-toolbelt==0.10.1
 rfc3986==2.0.0
 rich==12.6.0
+scikit-learn==1.1.3
+scipy==1.9.3
+seaborn==0.12.1
 SecretStorage==3.3.3
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+stack-data==0.6.2
 streamlit==1.15.2
+streamlit-option-menu==0.3.2
+texttable==1.6.7
+threadpoolctl==3.1.0
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
 tornado==6.2
+traitlets==5.6.0
 twine==4.0.2
 typing-extensions==4.4.0
 tzdata==2022.7
 tzlocal==4.2
+unblind==0.0.4
 urllib3==1.26.13
 validators==0.20.0
 watchdog==2.1.9
+wcwidth==0.2.5
 webencodings==0.5.1
+wget==3.2
 zipp==3.11.0
